# Gravitas

./: .gitignore  CMakeLists.txt  Makefile  README.fr.md  README.md  UIManager.hpp  leaderboard.txt  main.cpp  make.bat
docs/src/: classes_uml.puml  classes_uml_OpenGL.puml  classes_uml_final.puml
src/: G1.cpp  SFMLdemo.cpp  main.cpp
src/examples/: SFMLdemo.cpp  Simulation.cpp  Simulation2.cpp
src/libs/: Destination.cpp  GravitySource.cpp  LevelManager.cpp  Logger.cpp  Particle.cpp  SoundManager.cpp  Spaceship.cpp  UIManager.cpp
src/libs/include/: Destination.hpp  GravitySource.hpp  LevelManager.hpp  Logger.hpp  Particle.hpp  SoundManager.hpp  Spaceship.hpp  UIManager.hpp  utils.hpp
